--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>Tea Cosy: A CodeAcademyproject</title>
   </head>
 
   <body>
@@ -12,57 +13,94 @@
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
       </div>
       <div class="nav">
-         <nav>
-       <a href="#mission">Mission</a>
-       <a href="#featured">Featured Tea</a>
-              <a href="#locations">Locations</a>
-            </nav>
+        <nav>
+          <a href="#mission">Mission</a>
+          <a href="#featured">Featured Tea</a>
+          <a href="#locations">Locations</a>
+        </nav>
       </div>
     </header>
-    <div class="mission">
+    <!-- Mission Statement -->
+
+    <div id="mission" class="mission">
       <div class="mission-text">
-        <h2>
-          OUR MISSION
-        </h2>
-      <h4>
-        Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
-      </h4>
-       </div>
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free-Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
 
-      <!--THE TEA DISPLAY-->
+    </div>
+
+    <!--THE TEA DISPLAY-->
 
     <div id="featured" class="monthly-tea">
-        <h2>Tea of the Month</h2>
-        <h4>What's Steeping at The Tea Cozy?</h4>
-        <div class="teas">
-          <div class="teapics">
-            <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Cup full of tea with floating berries viewed from above">
-            <h4>Fall Berry Blitz Tea</h4>
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+      <div class="teas">
+        <div class="teapics">
+          <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Some Tea">
+          <h4>Fall Berry Blitz Tea</h4>
 
-          </div>
+        </div>
 
-          <div class="photo-caption">
+        <div class="photo-caption">
 
-            <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Small wooden crate containing tea">
+          <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Some Tea">
 
-            <h4>Spiced Rum Tea</h4>
-          </div>
-          <div class="photo-caption">
-            <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="Cake donut on white plate topped with powdered sugar">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="photo-caption">
+          <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="Some Tea">
 
-            <h4>Seasonal Donuts</h4>
-          </div>
-          <div class="photo-caption">
-            <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Cup of tea viewed from above through mesh fabric">
-            <h4>Myrtle Ave Tea</h4>
-          </div>
-          <div class="photo-caption">
-            <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Cup full of tea on colorful saucer next to sugar container and white flower">
-            <h4>Bedford Bizarre Tea</h4>
-          </div>
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="photo-caption">
+          <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Some Tea">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="photo-caption">
+          <img class="tea-photo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Some Tea">
+          <h4>Bedford Bizarre Tea</h4>
         </div>
       </div>
+    </div>
+    <div id="locations" class="location">
+      <h2>
+        LOCATIONS
+      </h2>
+      <div class="location-box">
+        <div class="location-text">
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="location-text">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="location-text">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </div>
+    </div>
+    <!-- CONTACT -->
+
+    <div id="contact-box" class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+
+    <!-- COPYRIGHT -->
+
+    <div class="copyright">
+      <h5>&copy; The Tea Cozy 2017</h5>
+    </div>
 
   </body>
 
